<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lab1</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="part1">Part 1</string>
    <string name="part2">Part 2</string>
    <string name="part3">Part 3</string>
    <string name="part1info">Part 1(3 separate activities)</string>
    <string name="part2info">Part 2(Persistent information)</string>
    <string name="part3info">Part 3(Fragments)</string>
    <string name="welcomepart1">Welcome to Part 1. \n Please select an activity below.</string>
    <string name="welcomepart2">Welcome to Part 2. \n The randomly selected string is : </string>
    <string name="welcomepart3">Welcome to Part 3. \n Please select an activity below.</string>
    <string name="welcomelab1">Welcome to Lab 1 as presented by Hunter Jansen \n Please select a lab part below.</string>
    <string name="backInstruction">To return to the activity selection screen, click on the app icon in the action bar.</string>
    <string name="backPartTwo">To return to the previous activity, click on the app icon in the action bar.</string>
    <string name="backPartInstruction">To return to the part selection screen, click on the app icon in the action bar.</string>
    <string name="activity1">Activity 1</string>
    <string name="activity2">Activity 2</string>
    <string name="activity3">Activity 3</string>
    <string name="goToOtherActivity">Go to other activity</string>

    <color name="lightgreen">#D9F966</color>

    <string-array name="listValues">
        <item>ECL500</item>
        <item>DBJ565</item>
        <item>PRJ566</item>
        <item>PRO608</item>
        <item>SES275</item>
    </string-array>

</resources>